zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Aplica_Todos_Modelos__c.field-meta.xml
<CustomField>
    <fullName>Aplica_Todos_Modelos__c</fullName>
    <description>Para politicas transversales de seguridad o proceso que no dependen del modelo. Si es falso, el articulo debe indicar su modelo.</description>
    <label>Aplica a todos los modelos</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>