zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Categoria_Agente__c.field-meta.xml
<CustomField>
    <fullName>Categoria_Agente__c</fullName>
    <description>Dominio del subagent que consume el articulo. Plan seccion 6.2.</description>
    <inlineHelpText>Dominio del subagent que consume el articulo. Plan seccion 6.2.</inlineHelpText>
    <label>Categoria de agente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Garantia</fullName>
                </value>
                <value>
                    <fullName>Diagnostico</fullName>
                </value>
                <value>
                    <fullName>Agenda</fullName>
                </value>
                <value>
                    <fullName>Compensacion</fullName>
                </value>
                <value>
                    <fullName>Seguridad</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>