zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Contenido__c.field-meta.xml
<CustomField>
    <fullName>Contenido__c</fullName>
    <description>Cuerpo completo del articulo de conocimiento. Usado por la accion Answer Questions with Knowledge para fundamentar respuestas del agente.</description>
    <label>Contenido</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>