zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Modelo_Codigo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Codigo__c</fullName>
    <description>ProductCode del modelo al que aplica el manual. Se usa texto y no lookup porque Knowledge no admite relaciones a Product2. El Flow resuelve el modelo por este codigo.</description>
    <label>Codigo de modelo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>