zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Nivel_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Riesgo__c</fullName>
    <description>Critico marca contenido que el agente NO usa para guiar autoservicio.</description>
    <label>Nivel de riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Bajo</fullName>
                    <default>true</default>
                    <label>Bajo</label>
                </value>
                <value>
                    <fullName>Medio</fullName>
                </value>
                <value>
                    <fullName>Critico</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>