zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Sistema_Unidad__c.field-meta.xml
<CustomField>
    <fullName>Sistema_Unidad__c</fullName>
    <description>Sistema al que aplica la politica. Plan seccion 6.2.</description>
    <inlineHelpText>Sistema al que aplica la politica. Plan seccion 6.2.</inlineHelpText>
    <label>Sistema de la unidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Tren motriz</fullName>
                </value>
                <value>
                    <fullName>Cabina</fullName>
                </value>
                <value>
                    <fullName>Frenos</fullName>
                </value>
                <value>
                    <fullName>Refrigeracion</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>