zapata-agentforce/force-app/main/default/objects/Knowledge__kav/fields/Version_Politica__c.field-meta.xml
<CustomField>
    <fullName>Version_Politica__c</fullName>
    <description>Identificador visible en la traza. Plan seccion 6.2.</description>
    <inlineHelpText>Identificador visible en la traza. Plan seccion 6.2.</inlineHelpText>
    <label>Version de politica</label>
    <length>20</length>
    <type>Text</type>
</CustomField>